Estilos del hero

--- a/index.html
+++ b/index.html
@@ -22,13 +22,18 @@
         </nav>
     </header>
     <div class="hero">
-        <div>
-            <h2>Disfruta del viaje <br> Eres dueño de tu tiempo
+        <div class="hero__registro hero__mobile">
+            <h2 class="hero__title">
+                Comienza a viajar <br> con <span class="brand">Lar&ltar</span>
             </h2>
-            <h3>Viaja con Lar&ltar </h3>
-            <button>REGISTRATE</button>
-            <span>O bien</span>
-            <button>Conviertete en un conductor</button>
+            <button class="button__gray">Descarga el app</button>
+        </div>
+        <div class="hero__registro hero__desktop">
+            <h2 class="hero__title">Disfruta del viaje <br> Eres dueño de tu tiempo</h2>
+            <h3 class="hero__subtitle">Viaja con <span class="brand">Lar&ltar</span> </h3>
+            <button class="button__gray">REGISTRATE</button>
+            <span class="hero__sep">O bien</span>
+            <button class="button__gray">Conviertete en un conductor</button>
         </div>
     </div>
     <div class="section">
